# codename-eagle-patch

./: .gitattributes  .gitignore  .oxfmtrc.json  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yaml  lint.yaml  release.yaml
dgvoodoo/: README.md  dgVoodoo.conf  dgVoodoo.txt
docker-dedicated/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  entrypoint.sh
docs/: changes.js
game/: README.md
game/common/: CENation.url  Codename Eagle multiplayer.url  default.cfg  readme141.txt  readme142.txt  readme143.txt  readme150.txt
game/common/global/: Ggcanon.scr  HeliBody.scr  Pbridge.scr  bspipe.scr  car2can.scr  flaga.scr  flagb.scr  flagbase.1  flagbase.2  parachu.scr
game/common/level129/: mainscr.scr  pbridge.scr
game/common/level130/: mainscr.scr  pole3.scr
game/common/level131/: bomb.scr  kropp.scr  mainscr.scr  red.scr
game/common/level132/: mainscr.scr  pole1.scr
game/common/level133/: global.h  m6moln.scr  mainscr.scr  mainscr2.scr
game/common/level134/: mainscr.scr
game/demo/: levels.nfo
game/demo-additions/: README.md
game/demo-additions/menu/: c_chn16.tga  c_dr3df.tga  c_gfmid.tga  c_gfno.tga  jg_tmA.tga  kc_invX.tga
game/demo/anm/: Gas1walk_old.anm  Gun3fv_old.anm  aparach.anm  baz1fire.anm  baz1walk.anm  baz3fs.anm  baz3i1s.anm  baz3i2s.anm  baz3us.anm  baz3ws.anm  bird.anm  chock.anm  det1fire.anm  det1walk.anm  det3fs.anm  det3fv.anm  det3us.anm  det3ws.anm  dog.anm  exp3fs.anm  exp3us.anm  exp3ws.anm  fla1walk.anm  fla3fs.anm  fla3us.anm  fla3ws.anm  flag.anm  gas1fire.anm  gas1load.anm  gas3fs.anm  gas3us.anm  gas3ws.anm  gre1fire.anm  gre1walk.anm  gre3fs.anm  gre3fv.anm  gre3us.anm  gre3ws.anm  gun1fire.anm  gun1load.anm  (+35 more)
game/demo/global/: AmoClip.scr  AmoPack.scr  HpackSml.scr  Hpacklg.scr  Jacket1.scr  Jacket2.scr  StPipe.scr  Svetlana.scr  aacanon.scr  bar.scr  barrack.scr  bazooka.scr  bcruiser.scr  bell.scr  bird.scr  bomb.scr  bottle.scr  box.scr  bradar.scr  bridge.scr  bstoneb.scr  chkey.scr  church.scr  crank.scr  detonat.scr  edoor.scr  exppack2.scr  fackla.scr  fence.scr  fence5.scr  fencec.scr  flamew.scr  fueltank.scr  gasamo.scr  gasw.scr  gate.scr  genkey.scr  grenade.scr  grenade2.scr  guardh.scr  (+33 more)
game/full/: levels.nfo
game/full-overrides/: README.md
game/full-overrides/24bits/: INTERFC1.tga  interfc1-cell39.bgra  snipemod32.tga  target32.tga
game/full-overrides/menu/: menufont.tga
game/full-overrides/src/: red.scr.txt
game/full/level1/: aimap  bar.scr  bbridge.scr  civil.scr  ddoor.scr  gate.scr  mainscr.scr  moose.scr  oldman.scr  plane2.1  plane2.2  safdoor.scr
game/full/level11/: praddor.scr
game/full/level12/: hf.scr
game/full/level3/: mainscr.scr  priest.1  rect.scr
game/full/level6/: aagun3.scr  mainscr.scr  plane.2  red.scr
game/full/level8/: 1  parachu.scr
installers/demo/: README.md  build.sh  installer.nsi
installers/demo-zip/: README.md  build.sh
installers/patch/: README.md  build.sh  installer.nsi  lowercase.ps1
installers/patch/stock/: default-1.33.cfg
patch/: Cargo.toml  README.md  make-ce-patch.js
patch/.cargo/: config.toml
patch/cemusic/: Cargo.toml  README.md
patch/cemusic/.cargo/: config.toml
patch/cemusic/src/: lib.rs
patch/cevideo/: Cargo.toml  README.md  build.rs  smackw32.def
patch/cevideo/.cargo/: config.toml
patch/cevideo/src/: audio.rs  bigstack.rs  color.rs  ffi.rs  lib.rs  logging.rs  pacing.rs  pixels.rs  proxy.rs  registry.rs  session.rs  sidecar.rs  smack_struct.rs
patch/cevideo/src/decoder/: mod.rs  rav1d_webm.rs
patch/cevideo/tests/: abi_sequence.rs
patch/cevideo/tests/fixtures/: tiny.webm
patch/cevideo/tests/stub/: Cargo.toml  build.rs  smackw32_orig.def
patch/cevideo/tests/stub/.cargo/: config.toml
patch/cevideo/tests/stub/src/: lib.rs
patch/docs/: technical-details.md
patch/iplist/: Cargo.toml  README.md
patch/iplist/.cargo/: config.toml
patch/iplist/src/: main.rs
patch/menudll/: make-menudll-patch.js
patch/menuinfo-nick/: Cargo.toml  README.md
patch/menuinfo-nick/.cargo/: config.toml
patch/menuinfo-nick/src/: lib.rs  main.rs
patch/menuinfo-nick/tests/: cli.rs  codec.rs
patch/src/: ce_gen.rs  main.rs
patch/textool/: Cargo.toml  README.md
patch/textool/src/: lib.rs  main.rs
patch/textool/tests/: cli.rs  pristine.rs
ripmusic/: Cargo.toml  README.md
ripmusic/.cargo/: config.toml
ripmusic/examples/: normcheck.rs
ripmusic/src/: cdrom.rs  encode.rs  image.rs  lib.rs  loudness.rs  main.rs
scripts/: build-demo-menupics.js  build-demo-texsec.js  build-full-payload.js  classify-game-files.js  embed-ce-icon.js  generate-docs.js  make-snipemod32.js  transcode-cutscenes.js
