[package]
name = "ripmusic"
version = "0.1.0"
edition = "2021"
description = "Rip the Codename Eagle CD audio tracks to <out>\\music\\trackNN.ogg for in-game use"

[[bin]]
name = "ripmusic"
path = "src/main.rs"

[dev-dependencies]
hound = "3" # WAV reading for the loudness validation example/tests

[dependencies]
# Ogg Vorbis encoder (bundled aoTuV libvorbis, built via cc). Matches the format
# cemusic.dll reads (trackNN.ogg).
vorbis_rs = "0.5"
# Pure-Rust EBU R128 loudness measurement (for the loudnorm-style normalization).
ebur128 = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_IO",
] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
